fixing global error

--- a/src/pages/Nozimjon/Nozimjon.css
+++ b/src/pages/Nozimjon/Nozimjon.css
@@ -1,11 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+::-webkit-scrollbar { display: none; }
 ::selection {
     background: white;
     color: #69afbb;
-}
-body {
-    background-color: black;
 }
 * {
     transition: 0.5s;
@@ -16,16 +14,28 @@ body {
 }
 
 main {
-    width: 100%;
-    height: 700px;
-    background-image: url('./img/bg.jpg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    width: 100%;
 }
+.main-1 {
+    height: 700px;
+    background-image: url('./img/bg.jpg');
+}
+.main-2 {
+    height: 700px;
+    background-image: url('./img/about-bg.jpg');
+}
+
 .hidden-gradient {
     background: linear-gradient(90deg, rgb(42, 35, 35), transparent 80%);
 }
+.hidden-bg {
+    background-color: rgba(42, 35, 35, 0.3);
+    height: 700px;
+}
+
 .modern-a {
     color: gray;
 }
