--- a/src/pages/Nozimjon/components.css
+++ b/src/pages/Nozimjon/components.css
@@ -267,3 +267,25 @@
 .border-round { border-radius: 50%; }
 
 /* elements / objects */
+
+.card-flex {
+    display: flex;
+    gap: 20px;
+    width: 100%;
+    justify-content: space-around;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.card-cont {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.card {
+    width: 300px;
+    height: 400px;
+    border-radius: 8px;
+    border: 1px solid white;
+}
