--- a/src/pages/Nozimjon/components.css
+++ b/src/pages/Nozimjon/components.css
@@ -4,6 +4,8 @@
 
 .flex { display: flex; }
 
+.col { flex-direction: column; }
+
 .jcc { justify-content: center; }
 .jcsb { justify-content: space-between; }
 .jcsa { justify-content: space-around; }
@@ -284,8 +286,16 @@
     align-items: center;
 }
 .card {
-    width: 300px;
-    height: 400px;
-    border-radius: 8px;
-    border: 1px solid white;
+    width: 400px;
+    height: 500px;
+    border-radius: 16px;
+    padding: 20px;
+}
+.card-image {
+    width: 100%;
+    height: 200px;
+    border-radius: 16px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
