--- a/src/pages/Nozimjon/components/Navbar.css
+++ b/src/pages/Nozimjon/components/Navbar.css
@@ -5,16 +5,16 @@ nav {
     background-color: black;
     align-items: center;
 }
-ul {
+nav ul {
     list-style: none;
     display: flex;
     gap: 20px;
 }
-a {
+nav a {
     color: white;
     text-decoration: none;
 }
-img {
+.nav-img {
     width: 70px;
     height: 70px;
     border-radius: 50%;
